<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/main_frame"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/mantabbg"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/main_fragment_caishi"
            style="@style/main_fra_s1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/sk_se"
            android:text="@string/receivables" />

        <TextView
            android:id="@+id/main_fragment_order"
            style="@style/main_fra_s1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/dz_no"
            android:text="@string/order" />

        <TextView
            android:id="@+id/main_fragment_recon"
            style="@style/main_fra_s1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/dd_no"
            android:text="@string/duizhang" />

        <TextView
            android:id="@+id/main_fragment_my"
            style="@style/main_fra_s1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@mipmap/my_no"
            android:text="@string/my" />
    </LinearLayout>


</LinearLayout>
