<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/top_layout" />

    <LinearLayout
        android:id="@+id/sk_liner_money"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="消费总金额"
            android:textColorHighlight="#221815"
            android:textSize="16sp" />


        <EditText
            android:id="@+id/shoukuan_sacle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:background="@null"
            android:hint="0.00"
            android:inputType="numberDecimal"
            android:textColor="#8a8a8a"
            android:textColorHighlight="#CDCDCD"
            android:textSize="60sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="#DFDFDF" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/houkuan_info" />

            <EditText
                android:id="@+id/shoukuan_nodiscount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:background="@null"
                android:hint="@string/one_fra_noPartake"
                android:inputType="numberDecimal"
                android:maxLength="8"
                android:textColor="#8a8a8a"
                android:textColorHint="#cccc"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/sk_linernumber"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/sk_number1"
                    style="@style/one_fra_btnbg"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/num1" />

                <Button
                    android:id="@+id/sk_number2"
                    style="@style/one_fra_btnbg"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="@string/num2" />

                <Button
                    android:id="@+id/sk_number3"
                    style="@style/one_fra_btnbg"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="@string/num3" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/sk_number4"
                    style="@style/one_fra_btnbg"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/num4" />

                <Button
                    android:id="@+id/sk_number5"
                    style="@style/one_fra_btnbg"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="@string/num5" />

                <Button
                    android:id="@+id/sk_number6"
                    style="@style/one_fra_btnbg"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="@string/num6" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/sk_number7"
                    style="@style/one_fra_btnbg"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/num7" />

                <Button
                    android:id="@+id/sk_number8"
                    style="@style/one_fra_btnbg"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="@string/num8" />

                <Button
                    android:id="@+id/sk_number9"
                    style="@style/one_fra_btnbg"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"

                    android:layout_weight="1"
                    android:text="@string/num9" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/sk_numberzero"
                    style="@style/one_fra_btnbg"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"

                    android:layout_weight="1"
                    android:text="@string/num0" />

                <Button
                    android:id="@+id/sk_numberdot"
                    style="@style/one_fra_btnbg"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="6dp"
                    android:layout_weight="1"
                    android:text="@string/dot" />

                <Button
                    android:id="@+id/sk_numberplus"
                    style="@style/one_fra_btnbg"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="6dp"
                    android:layout_weight="1"
                    android:text="@string/add" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/sk_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:layout_marginTop="4dp"
                    android:gravity="center"
                    android:text="@string/delete"
                    android:textColor="#0D89D4"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/sk_qingkong"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:layout_marginTop="14dp"
                    android:gravity="center"
                    android:text="@string/clear"
                    android:textColor="#0D89D4"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                style="@style/one_fra_s2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:src="@mipmap/yanquan" />

                <TextView
                    android:id="@+id/sk_yanquan"
                    style="@style/one_fra_s1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/checkQ" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/sk_shoukuan"
                style="@style/one_fra_s2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="14dp"
                    android:src="@mipmap/sk_scanner" />

                <TextView
                    style="@style/one_fra_s1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/receivables" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/sk_shoukuansum"
                style="@style/one_fra_s2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/equal"
                    android:textColor="#ffff"
                    android:textSize="28sp" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>